--- a/shared.css
+++ b/shared.css
@@ -1,6 +1,6 @@
 body {
-    font-family: "Quicksand", sans-serif;
-    margin: 0;
+  font-family: "Quicksand", sans-serif;
+  margin: 0;
 }
 
 header {
@@ -8,6 +8,9 @@ header {
   align-items: center;
   justify-content: space-between;
   padding: 15px 60px;
+  position: absolute;
+  width: 100%;
+  box-sizing: border-box;
 }
 
 ul {
@@ -20,7 +23,7 @@ header ul {
   width: 250px;
   display: flex;
   align-items: center;
-  justify-content: flex-end;
+  justify-content: space-between;
 }
 
 header li {
@@ -36,4 +39,18 @@ header li {
   text-decoration: none;
   text-transform: uppercase;
   text-shadow: 1px 1px 2px rgb(0, 0, 0);
+}
+
+header a {
+  color: rgb(255, 251, 0);
+  text-decoration: none;
+  font-size: 20px;
+  padding: 12px;
+  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2);
+  border-radius: 6px;
+}
+
+header a:hover {
+  color: rgb(77, 77, 77);
+  background-color: rgb(255, 251, 0);
 }
