--- a/styles.css
+++ b/styles.css
@@ -81,9 +81,14 @@
 }
 
 #highlights h2 {
-    text-transform: uppercase;
-    text-align: center;
-    font-size: 40px;
-    color: rgb(59, 65, 64);
-    margin:  24px 0;
+  text-transform: uppercase;
+  text-align: center;
+  font-size: 40px;
+  color: rgb(59, 65, 64);
+  margin: 24px 0;
+}
+
+#highlights {
+  padding: 24px;
+  background: linear-gradient(0deg, rgb(227, 255, 253), rgb(202, 243, 240));
 }
