--- a/places.css
+++ b/places.css
@@ -1,9 +1,23 @@
 body {
   background: linear-gradient(30deg, rgb(77, 77, 77), rgb(58, 58, 58));
+  color: rgb(68, 68, 68);
+}
+
+#page-logo a {
+  color: rgb(183, 230, 235);
 }
 
 header {
   position: static;
+}
+
+header a {
+  color: rgb(183, 230, 235);
+}
+
+header nav a:hover {
+  background-color: rgb(183, 230, 235);
+  color: rgb(59, 59, 59);
 }
 
 main li img {
@@ -21,20 +35,43 @@ main li {
 }
 
 main ul {
-  width: 800px;
-  margin: 0 auto;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 20px 20px;
+  width: 1200px;
+  margin: 0 auto 48px auto;
+}
+
+li:nth-of-type(3) {
+  grid-column: 1 / 3;
+}
+
+li:nth-of-type(10) {
+  grid-column: 1 / 3;
 }
 
 .item-content {
   padding: 24px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
-.actions{
-    padding: 50px 10px 0 0;
-    text-align: right;
+.item-content h2{
+  margin: 0;
+}
 
+.actions {
+  text-align: right;
 }
 
 .actions a {
-    text-decoration: none;
+  text-decoration: none;
+  padding: 6px;
+  color: rgb(22, 211, 228);
+  border-radius: 5px;
+}
+
+.actions a:hover {
+  background-color: rgb(235, 253, 255);
 }
